# lakda

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/src/kra/: main.py
backend/src/lakda/: main.py
backend/src/lakda/api/: ask.py  dependencies.py  documents.py  feedback.py  index.py
backend/src/lakda/db/: __init__.py  graph_store.py
backend/src/lakda/llm/: __init__.py  anthropic.py  base.py  client.py  gemini.py  ollama.py  open_router.py  utils.py
backend/src/lakda/llm/providers/: __init__.py  anthropic.py  google_genai.py  llamacpp.py  ollama.py  openrouter.py
backend/src/lakda/models/schemas/: ask.py  documents.py  index.py
backend/src/lakda/services/ask/: retrieval.py  service.py
backend/src/lakda/services/documents/: cleaner.py  converter.py
backend/src/lakda/services/index/: markdown_cleaner.py  pipeline.py  service.py  store.py
backend/src/utils/: logging.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_ask_api.py  test_documents_api.py  test_main.py
backend/tests/llm/: __init__.py  test_connect_2_model.py  test_error_boundary_real.py  test_llamaindex_integration.py  test_llamaindex_real.py  test_llm_clients.py  test_llm_clients_error.py
backend/tests/services/ask/: test_ask_service.py
backend/tests/services/documents/: test_converter.py
backend/tests/services/index/: test_heading_context_injector.py  test_index_service.py  test_pipeline_prompt.py
backend/tests/utils/: test_connect_db.py
config/: config.toml  gemini_config.json  mcp_config.json
config/example/: config.toml.example  gemini_config.json.example  mcp_config.json.example
docs/: api_endpoint.md  architecture.md  coding_rules.yml  error_handling.md  features.md  project_design.md  project_structure.md  screens.md  setup_mcp.md
docs/features/: FT01_input-question.md  FT03-process-documents2markdown.md  FT04_add-metadata-2-doc.md  FT08_llama-index-searching.md  FT09_feedback-accumulation.md  FT13_management-llm.md  features.md
envs/: .env.dev.example  .env.prod.example
envs/docker/: backend.Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile
frontend/: eslint.config.js  jest.config.js  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(chat)/: layout.tsx
frontend/src/app/(chat)/ask/: page.tsx
frontend/src/app/(chat)/ask/interpret/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/api/ask/chat/: route.ts
frontend/src/app/ask/: actions.ts  page.tsx
frontend/src/app/index/: actions.ts  page.tsx
frontend/src/components/ask/: AnswerDisplay.test.tsx  AnswerDisplay.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  QuestionForm.tsx  SubmitButton.tsx  useAskForm.test.ts  useAskForm.ts
frontend/src/components/ask/chat/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ChatWindow.test.tsx  ChatWindow.tsx  SourceList.test.tsx  SourceList.tsx  useAutoResize.test.ts  useAutoResize.ts  useChatScroll.test.ts  useChatScroll.ts
frontend/src/components/index/: IndexForm.test.tsx  IndexForm.tsx  useIndexForm.test.ts  useIndexForm.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: Textarea.tsx
frontend/src/hooks/: useChatAsk.test.ts  useChatAsk.ts
frontend/src/lib/: api.ts  mock-api.ts
frontend/src/store/: askStore.ts
frontend/src/types/: ask.ts  index.ts
scripts/: convert_documents.py  main.py  setup.sh
scripts/backend/: index.py
scripts/llm/: gemini_connect.py  openrouter_test.py
src/data/: processor.py
src/kra/: main.py
src/lakda/: main.py
src/processing/: __init__.py  generator.py  interpreter.py
src/utils/: config.py
tests/: test_integration_backend_neo4j.py  test_integration_processor.py  test_processor.py
